--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,6 +25,9 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Grant execute permission for Maven Wrapper
+        run: chmod +x mvnw
+
       - name: Build jar with Maven
         run: ./mvnw clean package -DskipTests
 
