--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,21 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_DB: swiftcodes
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: password
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -35,7 +50,7 @@ jobs:
         run: docker build -t cebix90/swift-codes-api:latest .
 
       - name: Test Docker image locally (dry-run)
-        run: docker run --rm cebix90/swift-codes-api:latest java -version
+        run: docker run --rm -e SPRING_PROFILES_ACTIVE=docker cebix90/swift-codes-api:latest java -version
 
       - name: Exit if pull request (skip push to Docker Hub)
         if: github.event_name == 'pull_request'
