--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -50,12 +50,13 @@ jobs:
         run: docker build -t cebix90/swift-codes-api:latest .
 
       - name: Test Docker image locally (dry-run)
-        run: docker run --rm \
-          -e SPRING_PROFILES_ACTIVE=docker \
-          -e SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/swiftcodes \
-          -e SPRING_DATASOURCE_USERNAME=user \
-          -e SPRING_DATASOURCE_PASSWORD=password \
-          cebix90/swift-codes-api:latest java -version
+        run: |
+          docker run --rm \
+            -e SPRING_PROFILES_ACTIVE=docker \
+            -e SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/swiftcodes \
+            -e SPRING_DATASOURCE_USERNAME=user \
+            -e SPRING_DATASOURCE_PASSWORD=password \
+            cebix90/swift-codes-api:latest java -version
 
       - name: Exit if pull request (skip push to Docker Hub)
         if: github.event_name == 'pull_request'
