--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           docker run --rm \
             -e SPRING_PROFILES_ACTIVE=docker \
-            -e SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/swiftcodes \
+            -e SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/swiftcodes \
             -e SPRING_DATASOURCE_USERNAME=user \
             -e SPRING_DATASOURCE_PASSWORD=password \
             cebix90/swift-codes-api:latest java -version
