--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,60 +15,49 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_DB: swiftcodes
-          POSTGRES_USER: user
-          POSTGRES_PASSWORD: password
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
+      # 1. Checkout
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # 2. Set up JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Grant execute permission for Maven Wrapper
-        run: chmod +x mvnw
-
-      - name: Build jar with Maven
-        run: ./mvnw clean package -DskipTests
-
-      - name: Build Docker image
-        run: docker build -t cebix90/swift-codes-api:latest .
-
-      - name: Test Docker image locally (dry-run)
+      # 3. Build backend jar
+      - name: Build the backend application
         run: |
-          docker run --rm \
-            -e SPRING_PROFILES_ACTIVE=docker \
-            -e SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/swiftcodes \
-            -e SPRING_DATASOURCE_USERNAME=user \
-            -e SPRING_DATASOURCE_PASSWORD=password \
-            cebix90/swift-codes-api:latest java -version
+          chmod +x mvnw
+          ./mvnw clean package -DskipTests
 
-      - name: Exit if pull request (skip push to Docker Hub)
-        if: github.event_name == 'pull_request'
-        run: echo "PR build complete, skipping Docker Hub push."
+      # 4. Install Docker Compose (optional if Actions runner doesn't have it)
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.22.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version
 
+      # 5. Run docker-compose to test integration (optional step but useful)
+      - name: Run docker-compose for integration test
+        run: |
+          docker-compose -f docker-compose.yml up -d --build
+          echo "Waiting for backend to be healthy..."
+          sleep 20
+          curl --fail http://localhost:8080/api/swift-codes || exit 1
+          docker-compose -f docker-compose.yml down
+
+      # 6. Log in to Docker Hub
       - name: Log in to Docker Hub
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push Docker image
-        if: github.event_name != 'pull_request'
-        run: docker push cebix90/swift-codes-api:latest
+      # 7. Build and push backend image
+      - name: Build and push backend image
+        run: |
+          docker build -t cebix90/swift-codes-api:latest .
+          docker push cebix90/swift-codes-api:latest
