--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,9 @@ services:
 
   swift-codes-api:
     image: cebix90/swift-codes-api:latest
-    build:
-      context: .
-      dockerfile: Dockerfile
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
     platform: linux/amd64
     depends_on:
       db:
