--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U user"]
+      test: ["CMD-SHELL", "pg_isready -U user -d swiftcodes"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -22,19 +22,16 @@ services:
       - swift-network
 
   swift-codes-api:
-    image: cebix90/swift-codes-api:latest
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
+#    image: cebix90/swift-codes-api:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     platform: linux/amd64
     depends_on:
       db:
         condition: service_healthy
     environment:
       SPRING_PROFILES_ACTIVE: docker
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/swiftcodes
-      SPRING_DATASOURCE_USERNAME: user
-      SPRING_DATASOURCE_PASSWORD: password
     ports:
       - "8080:8080"
     networks:
